# in-out

./: Cargo.toml  README.md
src/: input.rs  lib.rs  output.rs
