[package]
name = "in-out"
version = "0.1.0"
authors = ["Jezza <jezzadabomb@gmail.com>"]
edition = "2021"

description = "A simple library to read and write bytes in various forms."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Jezza/in-out"
keywords = ["binary", "bits", "reader", "writer", "bytecode"]

[features]
default = []
ctx = []

[dependencies]
byteorder = "1.3.4"
thiserror = "1.0"
